y.output
State 30 conflicts: 2 shift/reduce
State 38 conflicts: 2 shift/reduce
State 49 conflicts: 2 shift/reduce
State 89 conflicts: 1 shift/reduce
State 120 conflicts: 2 shift/reduce
State 125 conflicts: 22 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 StatementList: StatementList Statement SEMICOLON
    3              | Statement SEMICOLON
    4              | StatementList Statement

    5 Statement: PrintStmt
    6          | DeclarationStmt
    7          | IfStmt
    8          | Expression
    9          | LoopStmt

   10 PrintStmt: PRINT Bracket
   11          | PRINT '(' ID ')'

   12 IfStmt: IF Expression
   13       | ELSE

   14 LoopStmt: FOR LoopCondition
   15         | WHILE Expression Bracket StatementList Bracket

   16 LoopCondition: Expression Bracket Expression
   17              | Expression ';' Expression ';' Expression '{'

   18 DeclarationStmt: Type IDENT
   19                | Type IDENT '[' Expression ']'
   20                | Type IDENT ASSIGN Expression

   21 Type: INT
   22     | FLOAT
   23     | STRING
   24     | BOOL

   25 Expression: AssignmentExpr
   26           | ArithmeticExpr
   27           | ConversionExpr
   28           | TermExpr
   29           | BoolExpr

   30 AssignmentExpr: ID ASSIGN Expression
   31               | ID '[' Expression ']' ASSIGN Expression
   32               | Expression ADD_ASSIGN Expression
   33               | Expression SUB_ASSIGN Expression
   34               | Expression MUL_ASSIGN Expression
   35               | Expression QUO_ASSIGN Expression
   36               | Expression REM_ASSIGN Expression

   37 ArithmeticExpr: Expression ADD Expression
   38               | Expression SUB Expression
   39               | Expression MUL Expression
   40               | Expression QUO Expression
   41               | Expression REM Expression

   42 ConversionExpr: INT '(' IDENT ')'
   43               | FLOAT '(' IDENT ')'
   44               | INT '(' Num ')'
   45               | FLOAT '(' Num ')'

   46 BoolExpr: LogicalExpr
   47         | CompareExpr

   48 LogicalExpr: Expression LOR Expression
   49            | Expression LAND Expression

   50 CompareExpr: Expression GTR Expression
   51            | Expression LST Expression
   52            | Expression GEQ Expression
   53            | Expression LEQ Expression
   54            | Expression EQL Expression
   55            | Expression NEQ Expression

   56 Bool: TRUE
   57     | FALSE

   58 TermExpr: ID
   59         | ID '[' Expression ']'
   60         | STRING_LIT
   61         | Num
   62         | Bracket
   63         | Bool
   64         | TermExpr INC
   65         | TermExpr DEC
   66         | ADD Num
   67         | SUB Num
   68         | NOT Expression

   69 Num: INT_LIT
   70    | FLOAT_LIT

   71 ID: IDENT

   72 Bracket: '(' Expression ')'
   73        | '{'
   74        | '}'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 42 43 44 45 72
    ')' (41) 11 42 43 44 45 72
    ';' (59) 17
    '[' (91) 19 31 59
    ']' (93) 19 31 59
    '{' (123) 17 73
    '}' (125) 74
    error (256)
    ADD (258) 37 66
    SUB (259) 38 67
    MUL (260) 39
    QUO (261) 40
    REM (262) 41
    INT (263) 21 42 44
    FLOAT (264) 22 43 45
    BOOL (265) 24
    STRING (266) 23
    INC (267) 64
    DEC (268) 65
    GEQ (269) 52
    LEQ (270) 53
    EQL (271) 54
    NEQ (272) 55
    LST (273) 51
    GTR (274) 50
    ASSIGN (275) 20 30 31
    ADD_ASSIGN (276) 32
    SUB_ASSIGN (277) 33
    MUL_ASSIGN (278) 34
    QUO_ASSIGN (279) 35
    REM_ASSIGN (280) 36
    LAND (281) 49
    LOR (282) 48
    NOT (283) 68
    SEMICOLON (284) 2 3
    IF (285) 12
    ELSE (286) 13
    WHILE (287) 15
    FOR (288) 14
    PRINT (289) 10 11
    TRUE (290) 56
    FALSE (291) 57
    INT_LIT <i_val> (292) 69
    FLOAT_LIT <f_val> (293) 70
    STRING_LIT <s_val> (294) 60
    IDENT <id> (295) 18 19 20 42 43 71


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    Program (49)
        on left: 1
        on right: 0
    StatementList (50)
        on left: 2 3 4
        on right: 1 2 4 15
    Statement (51)
        on left: 5 6 7 8 9
        on right: 2 3 4
    PrintStmt (52)
        on left: 10 11
        on right: 5
    IfStmt (53)
        on left: 12 13
        on right: 7
    LoopStmt (54)
        on left: 14 15
        on right: 9
    LoopCondition <type> (55)
        on left: 16 17
        on right: 14
    DeclarationStmt (56)
        on left: 18 19 20
        on right: 6
    Type <type> (57)
        on left: 21 22 23 24
        on right: 18 19 20
    Expression <type> (58)
        on left: 25 26 27 28 29
        on right: 8 12 15 16 17 19 20 30 31 32 33 34 35 36 37 38 39 40 41 48 49 50 51 52 53 54 55 59 68 72
    AssignmentExpr <type> (59)
        on left: 30 31 32 33 34 35 36
        on right: 25
    ArithmeticExpr <type> (60)
        on left: 37 38 39 40 41
        on right: 26
    ConversionExpr <type> (61)
        on left: 42 43 44 45
        on right: 27
    BoolExpr <type> (62)
        on left: 46 47
        on right: 29
    LogicalExpr <boool> (63)
        on left: 48 49
        on right: 46
    CompareExpr <boool> (64)
        on left: 50 51 52 53 54 55
        on right: 47
    Bool <type> (65)
        on left: 56 57
        on right: 63
    TermExpr <type> (66)
        on left: 58 59 60 61 62 63 64 65 66 67 68
        on right: 28 64 65
    Num <type> (67)
        on left: 69 70
        on right: 44 45 61 66 67
    ID <id> (68)
        on left: 71
        on right: 11 30 31 58 59
    Bracket <type> (69)
        on left: 72 73 74
        on right: 10 15 16 62


State 0

    0 $accept: . Program $end

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    BOOL        shift, and go to state 5
    STRING      shift, and go to state 6
    NOT         shift, and go to state 7
    IF          shift, and go to state 8
    ELSE        shift, and go to state 9
    WHILE       shift, and go to state 10
    FOR         shift, and go to state 11
    PRINT       shift, and go to state 12
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    '{'         shift, and go to state 15
    '}'         shift, and go to state 16
    '('         shift, and go to state 17
    INT_LIT     shift, and go to state 18
    FLOAT_LIT   shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    IDENT       shift, and go to state 21

    Program          go to state 22
    StatementList    go to state 23
    Statement        go to state 24
    PrintStmt        go to state 25
    IfStmt           go to state 26
    LoopStmt         go to state 27
    DeclarationStmt  go to state 28
    Type             go to state 29
    Expression       go to state 30
    AssignmentExpr   go to state 31
    ArithmeticExpr   go to state 32
    ConversionExpr   go to state 33
    BoolExpr         go to state 34
    LogicalExpr      go to state 35
    CompareExpr      go to state 36
    Bool             go to state 37
    TermExpr         go to state 38
    Num              go to state 39
    ID               go to state 40
    Bracket          go to state 41


State 1

   66 TermExpr: ADD . Num

    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19

    Num  go to state 42


State 2

   67 TermExpr: SUB . Num

    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19

    Num  go to state 43


State 3

   21 Type: INT .
   42 ConversionExpr: INT . '(' IDENT ')'
   44               | INT . '(' Num ')'

    '('  shift, and go to state 44

    $default  reduce using rule 21 (Type)


State 4

   22 Type: FLOAT .
   43 ConversionExpr: FLOAT . '(' IDENT ')'
   45               | FLOAT . '(' Num ')'

    '('  shift, and go to state 45

    $default  reduce using rule 22 (Type)


State 5

   24 Type: BOOL .

    $default  reduce using rule 24 (Type)


State 6

   23 Type: STRING .

    $default  reduce using rule 23 (Type)


State 7

   68 TermExpr: NOT . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 46
    FLOAT       shift, and go to state 47
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    '{'         shift, and go to state 15
    '}'         shift, and go to state 16
    '('         shift, and go to state 17
    INT_LIT     shift, and go to state 18
    FLOAT_LIT   shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    IDENT       shift, and go to state 21

    Expression      go to state 48
    AssignmentExpr  go to state 31
    ArithmeticExpr  go to state 32
    ConversionExpr  go to state 33
    BoolExpr        go to state 34
    LogicalExpr     go to state 35
    CompareExpr     go to state 36
    Bool            go to state 37
    TermExpr        go to state 38
    Num             go to state 39
    ID              go to state 40
    Bracket         go to state 41


State 8

   12 IfStmt: IF . Expression

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 46
    FLOAT       shift, and go to state 47
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    '{'         shift, and go to state 15
    '}'         shift, and go to state 16
    '('         shift, and go to state 17
    INT_LIT     shift, and go to state 18
    FLOAT_LIT   shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    IDENT       shift, and go to state 21

    Expression      go to state 49
    AssignmentExpr  go to state 31
    ArithmeticExpr  go to state 32
    ConversionExpr  go to state 33
    BoolExpr        go to state 34
    LogicalExpr     go to state 35
    CompareExpr     go to state 36
    Bool            go to state 37
    TermExpr        go to state 38
    Num             go to state 39
    ID              go to state 40
    Bracket         go to state 41


State 9

   13 IfStmt: ELSE .

    $default  reduce using rule 13 (IfStmt)


State 10

   15 LoopStmt: WHILE . Expression Bracket StatementList Bracket

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 46
    FLOAT       shift, and go to state 47
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    '{'         shift, and go to state 15
    '}'         shift, and go to state 16
    '('         shift, and go to state 17
    INT_LIT     shift, and go to state 18
    FLOAT_LIT   shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    IDENT       shift, and go to state 21

    Expression      go to state 50
    AssignmentExpr  go to state 31
    ArithmeticExpr  go to state 32
    ConversionExpr  go to state 33
    BoolExpr        go to state 34
    LogicalExpr     go to state 35
    CompareExpr     go to state 36
    Bool            go to state 37
    TermExpr        go to state 38
    Num             go to state 39
    ID              go to state 40
    Bracket         go to state 41


State 11

   14 LoopStmt: FOR . LoopCondition

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 46
    FLOAT       shift, and go to state 47
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    '{'         shift, and go to state 15
    '}'         shift, and go to state 16
    '('         shift, and go to state 17
    INT_LIT     shift, and go to state 18
    FLOAT_LIT   shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    IDENT       shift, and go to state 21

    LoopCondition   go to state 51
    Expression      go to state 52
    AssignmentExpr  go to state 31
    ArithmeticExpr  go to state 32
    ConversionExpr  go to state 33
    BoolExpr        go to state 34
    LogicalExpr     go to state 35
    CompareExpr     go to state 36
    Bool            go to state 37
    TermExpr        go to state 38
    Num             go to state 39
    ID              go to state 40
    Bracket         go to state 41


State 12

   10 PrintStmt: PRINT . Bracket
   11          | PRINT . '(' ID ')'

    '{'  shift, and go to state 15
    '}'  shift, and go to state 16
    '('  shift, and go to state 53

    Bracket  go to state 54


State 13

   56 Bool: TRUE .

    $default  reduce using rule 56 (Bool)


State 14

   57 Bool: FALSE .

    $default  reduce using rule 57 (Bool)


State 15

   73 Bracket: '{' .

    $default  reduce using rule 73 (Bracket)


State 16

   74 Bracket: '}' .

    $default  reduce using rule 74 (Bracket)


State 17

   72 Bracket: '(' . Expression ')'

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 46
    FLOAT       shift, and go to state 47
    NOT         shift, and go to state 7
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    '{'         shift, and go to state 15
    '}'         shift, and go to state 16
    '('         shift, and go to state 17
    INT_LIT     shift, and go to state 18
    FLOAT_LIT   shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    IDENT       shift, and go to state 21

    Expression      go to state 55
    AssignmentExpr  go to state 31
    ArithmeticExpr  go to state 32
    ConversionExpr  go to state 33
    BoolExpr        go to state 34
    LogicalExpr     go to state 35
    CompareExpr     go to state 36
    Bool            go to state 37
    TermExpr        go to state 38
    Num             go to state 39
    ID              go to state 40
    Bracket         go to state 41


State 18

   69 Num: INT_LIT .

    $default  reduce using rule 69 (Num)


State 19

   70 Num: FLOAT_LIT .

    $default  reduce using rule 70 (Num)


State 20

   60 TermExpr: STRING_LIT .

    $default  reduce using rule 60 (TermExpr)


State 21

   71 ID: IDENT .

    $default  reduce using rule 71 (ID)


State 22

    0 $accept: Program . $end

    $end  shift, and go to state 56


State 23

    1 Program: StatementList .
    2 StatementList: StatementList . Statement SEMICOLON
    4              | StatementList . Statement

    ADD         shift, and go to state 1
    SUB         shift, and go to state 2
    INT         shift, and go to state 3
    FLOAT       shift, and go to state 4
    BOOL        shift, and go to state 5
    STRING      shift, and go to state 6
    NOT         shift, and go to state 7
    IF          shift, and go to state 8
    ELSE        shift, and go to state 9
    WHILE       shift, and go to state 10
    FOR         shift, and go to state 11
    PRINT       shift, and go to state 12
    TRUE        shift, and go to state 13
    FALSE       shift, and go to state 14
    '{'         shift, and go to state 15
    '}'         shift, and go to state 16
    '('         shift, and go to state 17
    INT_LIT     shift, and go to state 18
    FLOAT_LIT   shift, and go to state 19
    STRING_LIT  shift, and go to state 20
    IDENT       shift, and go to state 21

    $default  reduce using rule 1 (Program)

    Statement        go to state 57
    PrintStmt        go to state 25
    IfStmt           go to state 26
    LoopStmt         go to state 27
    DeclarationStmt  go to state 28
    Type             go to state 29
    Expression       go to state 30
    AssignmentExpr   go to state 31
    ArithmeticExpr   go to state 32
    ConversionExpr   go to state 33
    BoolExpr         go to state 34
    LogicalExpr      go to state 35
    CompareExpr      go to state 36
    Bool             go to state 37
    TermExpr         go to state 38
    Num              go to state 39
    ID               go to state 40
    Bracket          go to state 41


State 24

    3 StatementList: Statement . SEMICOLON

    SEMICOLON  shift, and go to state 58


State 25

    5 Statement: PrintStmt .

    $default  reduce using rule 5 (Statement)


State 26

    7 Statement: IfStmt .

    $default  reduce using rule 7 (Statement)


State 27

    9 Statement: LoopStmt .

    $default  reduce using rule 9 (Statement)


State 28

    6 Statement: DeclarationStmt .

    $default  reduce using rule 6 (Statement)


State 29

   18 DeclarationStmt: Type . IDENT
   19                | Type . IDENT '[' Expression ']'
   20                | Type . IDENT ASSIGN Expression

    IDENT  shift, and go to state 59


State 30

    8 Statement: Expression .
   32 AssignmentExpr: Expression . ADD_ASSIGN Expression
   33               | Expression . SUB_ASSIGN Expression
   34               | Expression . MUL_ASSIGN Expression
   35               | Expression . QUO_ASSIGN Expression
   36               | Expression . REM_ASSIGN Expression
   37 ArithmeticExpr: Expression . ADD Expression
   38               | Expression . SUB Expression
   39               | Expression . MUL Expression
   40               | Expression . QUO Expression
   41               | Expression . REM Expression
   48 LogicalExpr: Expression . LOR Expression
   49            | Expression . LAND Expression
   50 CompareExpr: Expression . GTR Expression
   51            | Expression . LST Expression
   52            | Expression . GEQ Expression
   53            | Expression . LEQ Expression
   54            | Expression . EQL Expression
   55            | Expression . NEQ Expression

    ADD         shift, and go to state 60
    SUB         shift, and go to state 61
    MUL         shift, and go to state 62
    QUO         shift, and go to state 63
    REM         shift, and go to state 64
    GEQ         shift, and go to state 65
    LEQ         shift, and go to state 66
    EQL         shift, and go to state 67
    NEQ         shift, and go to state 68
    LST         shift, and go to state 69
    GTR         shift, and go to state 70
    ADD_ASSIGN  shift, and go to state 71
    SUB_ASSIGN  shift, and go to state 72
    MUL_ASSIGN  shift, and go to state 73
    QUO_ASSIGN  shift, and go to state 74
    REM_ASSIGN  shift, and go to state 75
    LAND        shift, and go to state 76
    LOR         shift, and go to state 77

    ADD       [reduce using rule 8 (Statement)]
    SUB       [reduce using rule 8 (Statement)]
    $default  reduce using rule 8 (Statement)


State 31

   25 Expression: AssignmentExpr .

    $default  reduce using rule 25 (Expression)


State 32

   26 Expression: ArithmeticExpr .

    $default  reduce using rule 26 (Expression)


State 33

   27 Expression: ConversionExpr .

    $default  reduce using rule 27 (Expression)


State 34

   29 Expression: BoolExpr .

    $default  reduce using rule 29 (Expression)


State 35

   46 BoolExpr: LogicalExpr .

    $default  reduce using rule 46 (BoolExpr)


State 36

   47 BoolExpr: CompareExpr .

    $default  reduce using rule 47 (BoolExpr)


State 37

   63 TermExpr: Bool .

    $default  reduce using rule 63 (TermExpr)


State 38

   28 Expression: TermExpr .
   64 TermExpr: TermExpr . INC
   65         | TermExpr . DEC

    INC  shift, and go to state 78
    DEC  shift, and go to state 79

    INC       [reduce using rule 28 (Expression)]
    DEC       [reduce using rule 28 (Expression)]
    $default  reduce using rule 28 (Expression)


State 39

   61 TermExpr: Num .

    $default  reduce using rule 61 (TermExpr)


State 40

   30 AssignmentExpr: ID . ASSIGN Expression
   31               | ID . '[' Expression ']' ASSIGN Expression
   58 TermExpr: ID .
   59         | ID . '[' Expression ']'

    ASSIGN  shift, and go to state 80
    '['     shift, and go to state 81

    $default  reduce using rule 58 (TermExpr)


State 41

   62 TermExpr: Bracket .

    $default  reduce using rule 62 (TermExpr)


State 42

   66 TermExpr: ADD Num .

    $default  reduce using rule 66 (TermExpr)


State 43

   67 TermExpr: SUB Num .

    $default  reduce using rule 67 (TermExpr)


State 44

   42 ConversionExpr: INT '(' . IDENT ')'
   44               | INT '(' . Num ')'

    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    IDENT      shift, and go to state 82

    Num  go to state 83


State 45

   43 ConversionExpr: FLOAT '(' . IDENT ')'
   45               | FLOAT '(' . Num ')'

    INT_LIT    shift, and go to state 18
    FLOAT_LIT  shift, and go to state 19
    IDENT      shift, and go to state 84

    Num  go to state 85


State 46

   42 ConversionExpr: INT . '(' IDENT ')'
   44               | INT . '(' Num ')'

    '('  shift, and go to state 44


State 47

   43 ConversionExpr: FLOAT . '(' IDENT ')'
   45               | FLOAT . '(' Num ')'

    '('  shift, and go to state 45


State 48

   32 AssignmentExpr: Expression . ADD_ASSIGN Expression
   33               | Expression . SUB_ASSIGN Expression
   34               | Expression . MUL_ASSIGN Expression
   35               | Expression . QUO_ASSIGN Expression
   36               | Expression . REM_ASSIGN Expression
   37 ArithmeticExpr: Expression . ADD Expression
   38               | Expression . SUB Expression
   39               | Expression . MUL Expression
   40               | Expression . QUO Expression
   41               | Expression . REM Expression
   48 LogicalExpr: Expression . LOR Expression
   49            | Expression . LAND Expression
   50 CompareExpr: Expression . GTR Expression
   51            | Expression . LST Expression
   52            | Expression . GEQ Expression
   53            | Expression . LEQ Expression
   54            | Expression . EQL Expression
   55            | Expression . NEQ Expression
   68 TermExpr: NOT Expression .

    $default  reduce using rule 68 (TermExpr)


State 49
